# room

./: .gitmodules  CMakeLists.txt
doc/: spec  spec.org  translation-process.org
examples/: factorial.sbj  hello-world.sbj  parallel-calculation.sbj  question.sbj  quine.sbj
include/room/: common.h  lexer.h  lst_parser.h  parser.h  source.h  sst_parser.h
include/room/ast/: atom.h  perspective.h  set.h  space.h  subject.h  symbol.h
include/room/ast/lst/: atom.h  set.h
include/room/core/: token.h
include/room/core/tokens/: atom.h  end.h
include/room/lexer/: token.h
include/room/lst/: atom.h  parser.h  set.h  symbol.h
include/room/parser/: ast.h
include/room/sst/: atom.h  parser.h  perspective.h  set.h  space.h  subject.h  symbol.h
include/room/utils/: c++14.h  make_unique.h  source_string.h
include/testing/: facilities.h
src/: CMakeLists.txt
src/lexer/: CMakeLists.txt
src/lexer/src/: CMakeLists.txt  lexer.cpp  lexer.re2c  lexer_p
src/lexer/src/pregenerated/: lexer.re2c.conditions.h  lexer_p.h
src/lexer/src/utils/: source_string.cpp
src/lexer/tests/: CMakeLists.txt  atom_token.test.cpp  test_atom_token.cpp
src/lst-parser/: CMakeLists.txt
src/lst-parser/src/: CMakeLists.txt  lst_parser.cpp
src/lst-parser/tests/: CMakeLists.txt  test_correct_source.cpp  test_empty_source.cpp  test_incorrect_source.cpp
src/lst/src/: CMakeLists.txt  parser.cpp
src/lst/tests/: test_correct_source.cpp  test_empty_source.cpp  test_incorrect_source.cpp
src/parser/: CMakeLists.txt
src/parser/src/: CMakeLists.txt  parser.cpp
src/parser/src/detail/: alpha-parser.cpp  alpha-parser.h  atom-set.cpp  atom-set.h  atom-tree.h
src/parser/tests/: CMakeLists.txt
src/parser/tests/detail/: alpha-parser.test.cpp  atom-set.test.cpp
src/sst-parser/: CMakeLists.txt
src/sst-parser/src/: CMakeLists.txt
src/sst/src/: CMakeLists.txt  parser.cpp
